cmake_minimum_required (VERSION 3.8)

project (Challenges)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

set(CMAKE_CXX_EXTENSIONS FALSE)

add_subdirectory(Challenge1)
add_subdirectory(Challenge2)
add_subdirectory(Challenge3)
add_subdirectory(Challenge4)
add_subdirectory(Challenge5)
add_subdirectory(Challenge6)
add_subdirectory(Challenge7)
add_subdirectory(Challenge8)
add_subdirectory(Challenge9)
add_subdirectory(Challenge10)
add_subdirectory(Challenge11)
add_subdirectory(Challenge12)